Add pn sync algorithm

--- a/plugins/c_plugin_support/CMakeLists.txt
+++ b/plugins/c_plugin_support/CMakeLists.txt
@@ -7,13 +7,13 @@ add_library(c_plugin_support SHARED ${c_plugin_support_CPPS})
 target_link_libraries(c_plugin_support PUBLIC satdump_core)
 target_include_directories(c_plugin_support PUBLIC include)
 
-file(GLOB_RECURSE c_example_process_plugin_CPPS example_plugin_src/*.cpp)
-add_library(c_example_process_plugin SHARED ${c_example_process_plugin_CPPS})
-target_include_directories(c_example_process_plugin PUBLIC include)
+file(GLOB_RECURSE fengyun2_pn_sync_CPPS fengyun2_pn_sync/*.cpp)
+add_library(fengyun2_pn_sync SHARED ${fengyun2_pn_sync_CPPS})
+target_include_directories(fengyun2_pn_sync PUBLIC include)
 
 # make satdump plugin loader happy
-set_target_properties(c_example_process_plugin PROPERTIES PREFIX "")
-set_target_properties(c_example_process_plugin PROPERTIES SUFFIX ".plugin")
+set_target_properties(fengyun2_pn_sync PROPERTIES PREFIX "")
+set_target_properties(fengyun2_pn_sync PROPERTIES SUFFIX ".plugin")
 
 file(GLOB_RECURSE fengyun2_svissr_fix_CPPS fengyun2_svissr_fix/*.cpp)
 add_library(fengyun2_svissr_fix SHARED ${fengyun2_svissr_fix_CPPS})
@@ -24,5 +24,5 @@ set_target_properties(fengyun2_svissr_fix PROPERTIES PREFIX "")
 set_target_properties(fengyun2_svissr_fix PROPERTIES SUFFIX ".plugin")
 
 install(TARGETS c_plugin_support DESTINATION lib/satdump/plugins)
-install(TARGETS c_example_process_plugin DESTINATION share/satdump/resources/c_plugin)
+install(TARGETS fengyun2_pn_sync DESTINATION share/satdump/resources/c_plugin)
 install(TARGETS fengyun2_svissr_fix DESTINATION share/satdump/resources/c_plugin)
